[frontend] debug wrap issue

--- a/frontend/src/scss/lieu.scss
+++ b/frontend/src/scss/lieu.scss
@@ -22,7 +22,6 @@
     }
     .value {
       background-color: white;
-      white-space: nowrap;
       border-radius: 1em;
       padding: 0.3em 0.6em;
       margin-right: 0.5em;
